deploy/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbc-api-svc
  namespace: cbc-omega-squared
spec:
  type: ClusterIP
  selector:
    app: cbc-api
  ports:
  - name: http
    port: 80
    targetPort: 8000
